@@ -1,16 +1,22 @@
 #!/bin/bash
 
+if [ -z "$MN_ENV" ]; then
+  MN_ENV=benchmark
+else
+  MN_ENV=benchmark,$MN_ENV
+fi
+
 JAVA_OPTIONS="-server \
   -XX:+UseParallelGC \
   -XX:+UseNUMA \
-  -XX:-StackTraceInThrowable \
   -Dio.netty.buffer.checkBounds=false \
   -Dio.netty.buffer.checkAccessible=false \
   -Dvertx.disableMetrics=true \
   -Dvertx.threadChecks=false \
   -Dvertx.disableContextTimings=true  \
   -Dvertx.disableTCCL=true  \
-  -Dmicronaut.environments=benchmark
+  -Dmicronaut.environments=$MN_ENV \
+  --add-opens=java.base/java.lang=ALL-UNNAMED \
   $@"
 
-java $JAVA_OPTIONS -jar micronaut.jar
+exec java $JAVA_OPTIONS -jar micronaut.jar
